--- a/spring_data_jpa/src/main/resources/application.properties
+++ b/spring_data_jpa/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=Bank ledger - spring data jpa
+
+# PostgreSQL Database Connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/bank-ledger-spring-data-jpa
+spring.datasource.username=postgres
+spring.datasource.password=rooted
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
